--- a/wiki/plugins/images/templates/wiki/plugins/images/render.html
+++ b/wiki/plugins/images/templates/wiki/plugins/images/render.html
@@ -3,8 +3,8 @@
 
   NB! Watch out for line breaks, markdown might add <br />s and <p>s.
 {% endcomment %}{% with image.current_revision.imagerevision as revision %}{% spaceless %}
-<figure class="thumbnail{% if align %} pull-{{ align }}{% endif %}" style="width: 250px;">
-  {% thumbnail revision.image "250x250" as thumb %}
+<figure class="thumbnail{% if align %} pull-{{ align }}{% endif %}" style="width: {{ width }}px;">
+  {% thumbnail revision.image size as thumb %}
     <a href="{{ revision.image.url }}">
       <img src="{{ thumb.url }}" alt="{{ revision.get_filename }}" />
     </a>
